<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical">

  <Button
    android:id="@+id/quoteWriter_button_close"
    android:layout_width="25dp"
    android:layout_height="25dp"
    android:layout_marginEnd="@dimen/margin_padding_small"
    android:layout_marginLeft="@dimen/margin_padding_small"
    android:layout_marginRight="@dimen/margin_padding_small"
    android:layout_marginStart="@dimen/margin_padding_small"
    android:layout_marginTop="@dimen/margin_padding_medium"
    android:background="@drawable/wicker_drawable_close"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.023"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <android.support.constraint.Guideline
    android:id="@+id/quoteWriter_guideline_contentLeft"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_begin="41dp" />

  <android.support.constraint.Guideline
    android:id="@+id/quoteWriter_guideline_contentRight"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_percent="0.89" />

  <EditText
    android:id="@+id/quoteWriter_editText_quote"
    style="@style/wicker_edittext"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin_padding_large"
    android:gravity="bottom"
    android:hint="@string/field_quote"
    android:inputType="textMultiLine"
    android:lines="4"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintLeft_toRightOf="@+id/quoteWriter_guideline_contentLeft"
    app:layout_constraintRight_toLeftOf="@+id/quoteWriter_guideline_contentRight"
    app:layout_constraintTop_toBottomOf="@+id/quoteWriter_button_close"
    tools:text="Life is about making an impact not making an income." />

  <EditText
    android:id="@+id/quoteWriter_editText_author"
    style="@style/wicker_edittext_singleline"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:hint="@string/field_author_or_speaker"
    android:inputType="textPersonName"
    android:singleLine="true"
    app:layout_constraintEnd_toStartOf="@+id/quoteWriter_guideline_contentRight"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toStartOf="@+id/quoteWriter_guideline_contentLeft"
    app:layout_constraintTop_toBottomOf="@+id/quoteWriter_editText_quote" />

  <EditText
    android:id="@+id/quoteWriter_editText_source"
    style="@style/wicker_edittext_singleline"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:hint="@string/field_source"
    android:inputType="textPersonName"
    app:layout_constraintEnd_toStartOf="@+id/quoteWriter_guideline_contentRight"
    app:layout_constraintStart_toStartOf="@+id/quoteWriter_guideline_contentLeft"
    app:layout_constraintTop_toBottomOf="@+id/quoteWriter_editText_author" />

  <EditText
    android:id="@+id/quoteWriter_editText_link"
    style="@style/wicker_edittext_singleline"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:hint="@string/field_link"
    android:inputType="textPersonName"
    app:layout_constraintEnd_toStartOf="@+id/quoteWriter_guideline_contentRight"
    app:layout_constraintStart_toStartOf="@+id/quoteWriter_guideline_contentLeft"
    app:layout_constraintTop_toBottomOf="@+id/quoteWriter_editText_source" />

  <Button
    android:id="@+id/quoteWriter_button_save"
    style="@style/wicker_button"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginEnd="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="24dp"
    android:text="@string/action_save"
    app:layout_constraintEnd_toStartOf="@+id/quoteWriter_guideline_contentRight"
    app:layout_constraintStart_toStartOf="@+id/quoteWriter_guideline_contentLeft"
    app:layout_constraintTop_toBottomOf="@+id/quoteWriter_editText_link" />
</android.support.constraint.ConstraintLayout>